# CNCMachinSimulator

./: .gitignore  CMakeLists.txt  Makefile  README.md  imgui.ini
dependencies/include/: foo.h
dependencies/include/glad/: glad.h
resourses/: Hermle_C20_U.xml  parser_testFile.xml  test.xml
resourses/graphics/3Dmodel/: CROSS.STL  Camera.STL  sphere.STL  square.STL  systemCoord.STL
resourses/graphics/shaders/: lightSource.vs  primitiveShader.fs  shader.fs  shader.vs
resourses/parserXML/: NTX1000_original.xml  testParser.xml
someFitureImplamentation/: SysemEvent.cpp
src/: glad.c  main.cpp
src/application/eventSystem/: event.h  eventDespatcher.cpp  eventDespatcher.h  eventSystem.h  windowHandlersStore.cpp  windowHandlersStore.h
src/application/window/: window.cpp  window.h
src/camera/: baseCamera.h  camera.cpp  camera.h  cameraCAD.cpp  cameraCAD.h  cameraGame.cpp  cameraGame.h  cameraManager.h  cameraManipulator.cpp  cameraManipulator.h
src/event/: event.h
src/graphics/: dataStructure.h
src/graphics/shader/: shader.cpp  shader.h
src/graphics/shapeManipulators/: rotateShape3D.cpp  rotateShape3D.h
src/graphics/shapes/: baseShape.h  shapeFactory.cpp  shapeFactory.h  shapeSTL.cpp  shapeSTL.h
src/graphics/utility/: graphic_math.cpp  graphic_math.h
src/lib/: lib.cpp
src/lib/pub/: lib.h
src/parserSTL/: parserSTL.cpp  parserSTL.h
src/parserXML/: exceptionParserXML.cpp  exceptionParserXML.h  lexerXML.cpp  parserXML.cpp  smartBuffer.cpp  smartBuffer.h  symbolTableXML.cpp  syntaxRullXML.txt
src/parserXML/pub/: lexerXML.h  (+4 more)
src/runtime/: main.cpp
(+28 files in other folders)
